--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "handlebars": "^4.7.7",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.22",
     "sequelize": "^6.3.5"
   }
 }
